scheduler localization corrections

--- a/war/js/views/messages-scheadule-item.html
+++ b/war/js/views/messages-scheadule-item.html
@@ -6,37 +6,37 @@
   <ul>
     <li>
       <label for="monday-{{s.exact}}">
-        <input type="checkbox" id="monday-{{s.exact}}" ng-model="s.mon">&nbsp;maandag
+        <input type="checkbox" id="monday-{{s.exact}}" ng-model="s.mon">&nbsp;{{days.mon}}
       </label>
     </li>
     <li>
       <label for="tuesday-{{s.exact}}">
-        <input type="checkbox" id="tuesday-{{s.exact}}" ng-model="s.tue">&nbsp;dinsdag
+        <input type="checkbox" id="tuesday-{{s.exact}}" ng-model="s.tue">&nbsp;{{days.tue}}
       </label>
     </li>
     <li>
       <label for="wednesday-{{s.exact}}">
-        <input type="checkbox" id="wednesday-{{s.exact}}" ng-model="s.wed">&nbsp;woensdag
+        <input type="checkbox" id="wednesday-{{s.exact}}" ng-model="s.wed">&nbsp;{{days.wed}}
       </label>
     </li>
     <li>
       <label for="thursday-{{s.exact}}">
-        <input type="checkbox" id="thursday-{{s.exact}}" ng-model="s.thu">&nbsp;donderdag
+        <input type="checkbox" id="thursday-{{s.exact}}" ng-model="s.thu">&nbsp;{{days.thu}}
       </label>
     </li>
     <li>
       <label for="friday-{{s.exact}}">
-        <input type="checkbox" id="friday-{{s.exact}}" ng-model="s.fri">&nbsp;vrijdag
+        <input type="checkbox" id="friday-{{s.exact}}" ng-model="s.fri">&nbsp;{{days.fri}}
       </label>
     </li>
     <li>
       <label for="saturday-{{s.exact}}">
-        <input type="checkbox" id="saturday-{{s.exact}}" ng-model="s.sat">&nbsp;zaterdag
+        <input type="checkbox" id="saturday-{{s.exact}}" ng-model="s.sat">&nbsp;{{days.sat}}
       </label>
     </li>
     <li>
       <label for="sunday-{{s.exact}}">
-        <input type="checkbox" id="sunday-{{s.exact}}" ng-model="s.sun">&nbsp;zondag
+        <input type="checkbox" id="sunday-{{s.exact}}" ng-model="s.sun">&nbsp;{{days.sun}}
       </label>
     </li>
     <li><i class="icon-calendar"></i></li>
