roll backed ga tracking

--- a/war/js/views/messages-scheadule-item.html
+++ b/war/js/views/messages-scheadule-item.html
@@ -3,6 +3,9 @@
     <input name="time-start" type="text" ng-model="s.time" bs-timepicker>
     <i class="icon-time"></i>
   </div>
+
+  <!--<pre><small>{{s}}</small></pre>-->
+
   <ul>
     <li>
       <label for="monday-{{s.exact}}">
