--- a/war/js/views/messages.html
+++ b/war/js/views/messages.html
@@ -52,13 +52,13 @@
     </a>
   </li>
 
-  <li class="{{(views.notifications==true || views.scheaduler==true) && 'active'}}">
-    <a href="messages#notificationsTab"
-       data-toggle="tab"
-       ng-click="resetViews(); setViewTo('notifications')">
-      <span class="entypo">&#128276;</span> {{ui.message.notifications}}
-    </a>
-  </li>
+  <!--<li class="{{(views.notifications==true || views.scheaduler==true) && 'active'}}">-->
+    <!--<a href="messages#notificationsTab"-->
+       <!--data-toggle="tab"-->
+       <!--ng-click="resetViews(); setViewTo('notifications')">-->
+      <!--<span class="entypo">&#128276;</span> {{ui.message.notifications}}-->
+    <!--</a>-->
+  <!--</li>-->
 
   <li class="{{(views.trash==true ) && 'active'}}">
     <a href="messages#trashTab"
@@ -172,41 +172,18 @@
 
 
     <!-- schedulerPane toggle -->
-    <div class="control-group">
-      <label class="control-label">{{ui.message.repeat}}</label>
-      <div  class="btn-group"
-            data-toggle="buttons-radio">
-        <button type="button"
-                class="btn btn-small {{(scheaduled.status) && 'btn-success active'}}"
-                ng-model="scheaduled.status"
-                ng-click="scheaduled.status = true; addNewOffset()">{{ui.message.repeatOn}}</button>
-        <button type="button"
-                class="btn btn-small {{(!scheaduled.status) && 'active'}}"
-                ng-model="scheaduled.status"
-                ng-click="scheaduled.status = false">{{ui.message.repeatOff}}</button>
-      </div>
-    </div>
-    <!-- end scheduler toggle -->
-
-
-
-
-    <!-- schedulerPane toggle -->
     <!--<div class="control-group">-->
-      <!--&lt;!&ndash;ng-hide="scheadulerPane || config.profile.smartAlarm">&ndash;&gt;-->
       <!--<label class="control-label">{{ui.message.repeat}}</label>-->
-
-      <!--<div class="btn-group"-->
-           <!--bs-buttons-checkbox=""-->
-           <!--data-toggle="buttons-checkbox">-->
-
+      <!--<div  class="btn-group"-->
+            <!--data-toggle="buttons-radio">-->
         <!--<button type="button"-->
-                <!--class="btn btn-small"-->
-                <!--ng-model="scheadulerPane"-->
-                <!--ng-click="scheadulerPane == !scheadulerPane"-->
-                <!--bs-button="">{{ui.message.repeatOn}}-->
-        <!--</button>-->
-
+                <!--class="btn btn-small {{(scheaduled.status) && 'btn-success active'}}"-->
+                <!--ng-model="scheaduled.status"-->
+                <!--ng-click="scheaduled.status = true; addNewOffset()">{{ui.message.repeatOn}}</button>-->
+        <!--<button type="button"-->
+                <!--class="btn btn-small {{(!scheaduled.status) && 'active'}}"-->
+                <!--ng-model="scheaduled.status"-->
+                <!--ng-click="scheaduled.status = false">{{ui.message.repeatOff}}</button>-->
       <!--</div>-->
     <!--</div>-->
     <!-- end scheduler toggle -->
