--- a/war/js/views/profile.html
+++ b/war/js/views/profile.html
@@ -175,7 +175,8 @@
             </div>
           </div>
 
-          <div class="control-group">
+          <div class="control-group"
+               ng-hide="app.resources.role > 1">
             <!--<label class="control-label">{{ui.groups.firstName}}</label>-->
             <label class="control-label">Groups</label>
             <!--<p>{{groups}}</p>-->
@@ -337,6 +338,9 @@
               <p class="text-error" ng-hide="pincodeExistsValidation">
                 <small><i>{{pincodeExistsValidationMessage}}</i></small>
               </p>
+              <span class="help-block" style="margin-top: -5px;">
+                <small><i>{{ui.profile.pincodeInfo}}</i></small>
+              </span>
             </div>
           </div>
 
