ie styling fix planboard statistics availability bar team members

--- a/war/js/views/planboard.html
+++ b/war/js/views/planboard.html
@@ -758,7 +758,7 @@
                   <div class="progress">
                     <div  ng-repeat="stat in member.stats" 
                           class="bar {{stat.state}}" 
-                          style="width: {{stat.ratio}}%;"></div>
+                          ng-style="{ 'width': stat.ratio + '%' }"></div>
                   </div>
                   <small class="muted">{{member.stats | convertRatios}}</small>
                 </li>
