new colors for timeline and tryout for browser bug

--- a/war/js/views/planboard.html
+++ b/war/js/views/planboard.html
@@ -3,6 +3,9 @@
   <!-- page header -->
   <div class="page-header">
     <h2>{{ui.planboard.planboard}}</h2>
+
+    <!--<a href="#" class="time-tip" data-toggle="tooltip" data-placement="top" title="Some tooltip comes here" data-original-title="Tooltip on top">some</a>-->
+
     <div class="btn-group pull-right">
 
       <div class="btn-group">
