--- a/war/js/views/planboard.html
+++ b/war/js/views/planboard.html
@@ -518,7 +518,8 @@
               <div class="legenda-row">
                 <strong>{{ui.planboard.members}}</strong>
                 <ul>
-                  <li ng-repeat="(key, value) in timeline.config.states" class="legenda-{{value.className}}">
+                  <li ng-repeat="(key, value) in timeline.config.states"
+                      class="legenda-{{value.className}}">
                     <label>
                       <div class="square"></div>
                       <input  type="checkbox" 
