--- a/sass/app/_dashboard.scss
+++ b/sass/app/_dashboard.scss
@@ -204,15 +204,23 @@
               }
 
               .more {
-                background-color: #415e6b;  
+                // background-color: #415e6b;
+                background-color: #4f824f;
               }
 
               .even {
-                background-color: #ba6a24;  
+                // background-color: #ba6a24;
+                background-color: #ba6a24;
               }
 
               .less {
-                background-color: #a0a0a0;  
+                // background-color: #a0a0a0;
+                background-color: #a93232;
+              }
+
+              .disabled {
+                // background-color: #a0a0a0;
+                background-color: #a0a0a0;
               }
 
               .pie {
