--- a/war/css/app.css
+++ b/war/css/app.css
@@ -566,12 +566,15 @@ dl dd {
   margin-right: 10px;
 }
 #dashboard .widget ul#pies li .blocks .block .icon .more {
-  background-color: #415e6b;
+  background-color: #4f824f;
 }
 #dashboard .widget ul#pies li .blocks .block .icon .even {
   background-color: #ba6a24;
 }
 #dashboard .widget ul#pies li .blocks .block .icon .less {
+  background-color: #a93232;
+}
+#dashboard .widget ul#pies li .blocks .block .icon .disabled {
   background-color: #a0a0a0;
 }
 #dashboard .widget ul#pies li .blocks .block .icon .pie {
@@ -1438,7 +1441,7 @@ ul.nav-tabs-app li span.entypo {
 }
 
 .legenda-row .legenda-state-available-south .square {
-  background-color: #e08a0c;
+  background-color: #65619b;
 }
 
 .legenda-row .legenda-state-unavailable .square {
@@ -1449,12 +1452,8 @@ ul.nav-tabs-app li span.entypo {
   background-color: #e0c100;
 }
 
-.legenda-row .legenda-state-unreached .square {
-  background-color: #65619b;
-}
-
 .legenda-row .legenda-more .square {
-  background-color: #415e6b;
+  background-color: #4f824f;
 }
 
 .legenda-row .legenda-even .square {
@@ -1462,7 +1461,7 @@ ul.nav-tabs-app li span.entypo {
 }
 
 .legenda-row .legenda-less .square {
-  background-color: #a0a0a0;
+  background-color: #a93232;
 }
 
 #legends {
