--- a/war/js/views/dashboard.html
+++ b/war/js/views/dashboard.html
@@ -13,7 +13,7 @@
 
 
 <!--smartAlarming-->
-<div class="row-fluid">
+<div class="row-fluid" style="display: none;">
   <div class="sa widget span12"
        ng-show="config.profile.smartAlarm">
 
@@ -228,7 +228,7 @@
 
 
 <!--Availability list-->
-<div class="row-fluid">
+<div class="row-fluid" style="display: none;">
   <div id="availabilities" class="sa widget span12">
 
     <div class="head">
@@ -546,21 +546,23 @@
         <table>
           <tr>
             <td class="first">
-              <span class="prio label label-important" ng-show="alarm.prio.1">PRIO 1</span>
-              <span class="prio label label-warning" ng-show="alarm.prio.2">PRIO 2</span>
-              <span class="prio label label-info" ng-show="alarm.prio.3">PRIO 3</span>
+              <span class="prio label label-important" ng-show="alarm.prio['1']">PRIO 1</span>
+              <span class="prio label label-warning" ng-show="alarm.prio['2']">PRIO 2</span>
+              <span class="prio label label-info" ng-show="alarm.prio['3']">PRIO 3</span>
               <span class="prio label label-inverse" ng-show="alarm.prio.test">PROEFALARM</span>
             </td>
             <td class="last">
-              <p>{{alarm.body}}</p>
+              <span class="label label-natural" style="margin-bottom: 7px">{{alarm.day}} {{alarm.time}}</span>
+              <br/>
+              {{alarm.body}}
             </td>
           </tr>
           <tr>
-            <td>
-              <small class="muted"><i>{{alarm.msgCode}}</i></small>
-            </td>
-            <td>
-              <span class="label label-natural pull-right">{{alarm.day}} {{alarm.time}}</span>
+            <td colspan="2">
+              <small class="">
+                <i class="icon-bullhorn" style="margin-top: -2px; color: #a0a0a0 !important"></i>
+                <i>{{alarm.msgCode}}</i>
+              </small>
             </td>
           </tr>
         </table>
