--- a/war/js/views/planboard.html
+++ b/war/js/views/planboard.html
@@ -414,6 +414,12 @@
 
 
 
+            <!--<pre><small>{{config.timeline.config.states}}</small></pre>-->
+
+
+
+
+
             <!-- timeline-toolbar -->
             <div id="timeline-toolbar"
                  style="{{ (browser.mobile) && 'height: auto' }}">
