changed colors to brighter ones

--- a/war/js/views/dashboard.html
+++ b/war/js/views/dashboard.html
@@ -13,7 +13,7 @@
 
 
 <!--smartAlarming-->
-<div class="row-fluid" style="display: none;">
+<div class="row-fluid">
   <div class="sa widget span12"
        ng-show="config.profile.smartAlarm">
 
@@ -228,7 +228,7 @@
 
 
 <!--Availability list-->
-<div class="row-fluid" style="display: none;">
+<div class="row-fluid">
   <div id="availabilities" class="sa widget span12">
 
     <div class="head">
