--- a/war/js/views/profile.html
+++ b/war/js/views/profile.html
@@ -247,28 +247,70 @@
             </div>
           </div>
 
+
+
+
+
+
+
           <div class="control-group">
-            <label class="control-label">{{ui.profile.phone}}</label>
-            <div class="controls">
-              <input  type="text"
-                      id="inputPhoneNumber"
-                      class="span3"
-                      ng-model="profilemeta.PhoneAddress"
-                      ng-change="phoneNumberParser(profilemeta.PhoneAddress)"
-                      value="{{data.resources.PhoneAddress}}">
-              <!--<p class="text-error" ng-show="!profilemeta.PhoneAddress">-->
-                <!--<small><i>Please fill your phone number!</i></small>-->
-              <!--</p>-->
-              <p class="text-error" ng-hide="phoneNumberParsed.result">
-                <small><i>{{phoneNumberParsed.message}}</i></small>
-              </p>
-              <p class="text-success" ng-show="phoneNumberParsed.result">
-                <small>
-                  <i>{{phoneNumberParsed.message}}</i>
-                </small>
-              </p>
+            <label class="control-label">
+              {{ui.profile.phone}}
+              <a ng-click="addPhoneNumber()">Add phone</a>
+            </label>
+
+
+
+              <phone index="{{$index}}"
+                     number="number"
+                     ng-repeat="number in data.resources.PhoneAddresses">
+
+                <div class="controls">
+                  <span class="label label-important">{{index}}</span>
+
+                  <div class="input-append">
+
+                    <input type="text"
+                           id="inputPhoneNumber-{{index}}"
+                           class="span12"
+                           ng-model="n">
+                    <!--ng-change="phoneNumberParser(phoneNumber)">-->
+                    <!--value="{{data.resources.PhoneAddress}}">-->
+
+                    <button class="btn"
+                            type="button"
+                            ng-click="remove(index)">
+                      <i class="icon-remove"></i>
+                    </button>
+
+
+                    <!--<p class="text-error" ng-show="!profilemeta.PhoneAddress">-->
+                    <!--<small><i>Please fill your phone number!</i></small>-->
+                    <!--</p>-->
+
+                    <!--<pre><small>{{phoneNumberParsed}}</small></pre>-->
+
+                    <p class="text-error" ng-hide="phoneNumberParsed.result">
+                      <small><i>{{phoneNumberParsed.message}}</i></small>
+                    </p>
+                    <p class="text-success" ng-show="phoneNumberParsed.result">
+                      <small>
+                        <i>{{phoneNumberParsed.message}}</i>
+                      </small>
+                    </p>
+
+                  </div>
+                </div>
+
+              </phone>
             </div>
-          </div>
+
+          <pre><small>{{data.resources.PhoneAddresses}}</small></pre>
+
+
+
+
+
 
           <div class="control-group">
             <label class="control-label">{{ui.profile.address}}</label>
