--- a/war/js/views/profile.html
+++ b/war/js/views/profile.html
@@ -13,7 +13,7 @@
   <div class="tabbable tabs-left">
 
 
-    
+
     <!-- tabs -->
     <ul class="nav nav-tabs nav-tabs-app" style="margin-right: 0px;">
 
@@ -256,56 +256,134 @@
           <div class="control-group">
             <label class="control-label">
               {{ui.profile.phone}}
-              <a ng-click="addPhoneNumber()">Add phone</a>
+              <!--<a ng-click="addPhoneNumber()">Add phone</a>-->
             </label>
 
 
 
-              <phone index="{{$index}}"
-                     number="number"
-                     ng-repeat="number in data.resources.PhoneAddresses">
+            <div class="controls">
 
-                <div class="controls">
-                  <span class="label label-important">{{index}}</span>
+              <div class="input-prepend"
+                   ng-show="phoneViews.second">
+                <span class="add-on">1.</span>
+                <input type="text"
+                       class="inputPhoneNumber-1"
+                       ng-model="profilemeta.phones[1]"
+                       ng-change="phoneNumberParser(profilemeta.phones[1])"
+                       value="{{data.resources.PhoneAddresses[0]}}"
+                       style="width: 200px">
+              </div>
 
-                  <div class="input-append">
+              <div class="input-prepend input-append" ng-hide="phoneViews.second">
+                <span class="add-on">1.</span>
+                <input type="text"
+                       class="inputPhoneNumber-1"
+                       ng-model="profilemeta.phones[1]"
+                       ng-change="phoneNumberParser(profilemeta.phones[1])"
+                       value="{{data.resources.PhoneAddresses[0]}}"
+                       style="width: 200px">
+                <button class="btn btn-success"
+                        type="button"
+                        ng-click="addPhoneNumber('second')">
+                  <i class="icon-white icon-plus"></i> Add new
+                </button>
+              </div>
 
-                    <input type="text"
-                           id="inputPhoneNumber-{{index}}"
-                           class="span12"
-                           ng-model="n">
-                    <!--ng-change="phoneNumberParser(phoneNumber)">-->
-                    <!--value="{{data.resources.PhoneAddress}}">-->
-
-                    <button class="btn"
-                            type="button"
-                            ng-click="remove(index)">
-                      <i class="icon-remove"></i>
-                    </button>
-
-
-                    <!--<p class="text-error" ng-show="!profilemeta.PhoneAddress">-->
-                    <!--<small><i>Please fill your phone number!</i></small>-->
-                    <!--</p>-->
-
-                    <!--<pre><small>{{phoneNumberParsed}}</small></pre>-->
-
-                    <p class="text-error" ng-hide="phoneNumberParsed.result">
-                      <small><i>{{phoneNumberParsed.message}}</i></small>
-                    </p>
-                    <p class="text-success" ng-show="phoneNumberParsed.result">
-                      <small>
-                        <i>{{phoneNumberParsed.message}}</i>
-                      </small>
-                    </p>
-
-                  </div>
-                </div>
-
-              </phone>
+              <p class="text-error" ng-show="!profilemeta.PhoneAddress">
+                <small><i>Please fill your phone number!</i></small>
+              </p>
+              <p class="text-error" ng-hide="phoneNumberParsed.result">
+                <small><i>{{phoneNumberParsed.message}}</i></small>
+              </p>
+              <p class="text-success" ng-show="phoneNumberParsed.result">
+                <small><i>{{phoneNumberParsed.message}}</i></small>
+              </p>
             </div>
 
-          <pre><small>{{data.resources.PhoneAddresses}}</small></pre>
+
+
+            <div class="controls" ng-show="phoneViews.second">
+
+              <div class="input-prepend" ng-show="phoneViews.third">
+                <span class="add-on">2.</span>
+                <input type="text"
+                       class="inputPhoneNumber-2"
+                       ng-model="profilemeta.phones[2]"
+                       ng-change="phoneNumberParser(profilemeta.phones[2])"
+                       value="{{data.resources.PhoneAddresses[1]}}"
+                       style="width: 200px">
+              </div>
+
+              <div class="input-prepend input-append"
+                   ng-hide="phoneViews.third">
+                <span class="add-on">2.</span>
+                <input type="text"
+                       class="inputPhoneNumber-2"
+                       ng-model="profilemeta.phones[2]"
+                       ng-change="phoneNumberParser(profilemeta.phones[2])"
+                       value="{{data.resources.PhoneAddresses[1]}}"
+                       style="width: 200px">
+                <button class="btn"
+                        type="button"
+                        ng-click="removePhoneNumber('second')">
+                  <i class="icon-remove"></i> Remove
+                </button>
+                <button class="btn btn-success"
+                        type="button"
+                        ng-click="addPhoneNumber('third')"
+                        ng-hide="phoneViews.third">
+                  <i class="icon-white icon-plus"></i> Add new
+                </button>
+              </div>
+
+              <p class="text-error" ng-show="!profilemeta.PhoneAddress">
+                <small><i>Please fill your phone number!</i></small>
+              </p>
+              <p class="text-error" ng-hide="phoneNumberParsed.result">
+                <small><i>{{phoneNumberParsed.message}}</i></small>
+              </p>
+              <p class="text-success" ng-show="phoneNumberParsed.result">
+                <small><i>{{phoneNumberParsed.message}}</i></small>
+              </p>
+            </div>
+
+
+
+            <div class="controls" ng-show="phoneViews.third">
+              <div class="input-prepend input-append">
+                <span class="add-on">3.</span>
+                <input type="text"
+                       class="inputPhoneNumber-3"
+                       ng-model="profilemeta.phones[3]"
+                       ng-change="phoneNumberParser(profilemeta.phones[3])"
+                       value="{{data.resources.PhoneAddresses[2]}}"
+                       style="width: 200px">
+                <button class="btn"
+                        type="button"
+                        ng-click="removePhoneNumber('third')">
+                  <i class="icon-remove"></i> Remove
+                </button>
+              </div>
+
+              <p class="text-error" ng-show="!profilemeta.PhoneAddress">
+                <small><i>Please fill your phone number!</i></small>
+              </p>
+              <p class="text-error" ng-hide="phoneNumberParsed.result">
+                <small><i>{{phoneNumberParsed.message}}</i></small>
+              </p>
+              <p class="text-success" ng-show="phoneNumberParsed.result">
+                <small><i>{{phoneNumberParsed.message}}</i></small>
+              </p>
+            </div>
+
+
+          </div>
+
+
+
+
+
+          <!--<pre><small>{{data.resources.PhoneAddresses}}</small></pre>-->
 
 
 
@@ -387,7 +465,7 @@
           </div>
 
           <div class="form-actions">
-            <button   type="submit" 
+            <button   type="submit"
                       class="btn btn-success"
                       ng-click="save(profilemeta)">{{ui.profile.saveProfile}}</button>
           </div>
@@ -418,29 +496,29 @@
           <div class="control-group">
             <label class="control-label">{{ui.profile.currentPass}}</label>
             <div class="controls">
-              <input  type="password" 
-                      class="span3" 
+              <input  type="password"
+                      class="span3"
                       ng-model="passwords.current">
             </div>
           </div>
           <div class="control-group">
             <label class="control-label">{{ui.profile.newPass}}</label>
             <div class="controls">
-              <input  type="password" 
-                      class="span3" 
+              <input  type="password"
+                      class="span3"
                       ng-model="passwords.new1">
             </div>
           </div>
           <div class="control-group">
             <label class="control-label">{{ui.profile.newPassRepeat}}</label>
             <div class="controls">
-              <input  type="password" 
-                      class="span3" 
+              <input  type="password"
+                      class="span3"
                       ng-model="passwords.new2">
             </div>
           </div>
           <div class="form-actions">
-            <button   type="submit" 
+            <button   type="submit"
                       class="btn btn-success"
                       ng-click="change(passwords)">{{ui.profile.changePass}}</button>
           </div>
@@ -454,7 +532,7 @@
 
 
       <!-- userTimelineTab -->
-      <div class="tab-pane {{(views.timeline==true) && 'active'}}" 
+      <div class="tab-pane {{(views.timeline==true) && 'active'}}"
             id="userTimelineTab"
             ng-hide="views.user"
             ng-controller="timeline">
@@ -465,8 +543,8 @@
         <div style="overflow: hidden; height: 35px">
           <h3 style="margin-top: 0;" class="pull-left">{{ui.profile.timeline}}</h3>
           <div class="btn-group pull-right">
-            <button type="submit" 
-                    ng-click="toggleSlotForm()" 
+            <button type="submit"
+                    ng-click="toggleSlotForm()"
                     class="btn btn-success {{(forms.add==true) && 'active'}}">{{ui.profile.newAvail}}</button>
           </div>
         </div>
@@ -485,7 +563,7 @@
 
             <!-- this week -->
             <div class="btn-group pull-left" style="margin-right: 5px">
-              <button type="button" 
+              <button type="button"
                       class="btn"
                       ng-click="timelineThisWeek()">{{ui.dashboard.thisWeek}}</button>
             </div>
@@ -495,16 +573,16 @@
 
             <!-- timeline navigation -->
             <div class="btn-group pull-left" style="margin-right: 5px">
-              <button type="button" 
+              <button type="button"
                       class="btn"
                       ng-click="timelineWeekBefore()"><i class="icon-arrow-left"></i></button>
-              <button type="button" 
+              <button type="button"
                       class="btn"
                       ng-click="timelineZoomIn()"><i class="icon-zoom-in"></i></button>
-              <button type="button" 
+              <button type="button"
                       class="btn"
                       ng-click="timelineZoomOut()"><i class="icon-zoom-out"></i></button>
-              <button type="button" 
+              <button type="button"
                       class="btn"
                       ng-click="timelineWeekAfter()"><i class="icon-arrow-right"></i></button>
             </div>
@@ -513,9 +591,9 @@
 
             <!-- legenda -->
             <div  class="btn-group pull-left">
-              <button type="button" 
+              <button type="button"
                       ng-click="showLegenda()"
-                      class="btn {{(timeline.config.legendarer==true) && 'active'}}" 
+                      class="btn {{(timeline.config.legendarer==true) && 'active'}}"
                       ng-model="timeline.config.legendarer">{{ui.planboard.legenda}}</button>
             </div>
             <!-- end legenda -->
@@ -547,19 +625,19 @@
 
         <hr ng-hide="forms.add || forms.edit">
 
-        
+
         <!-- timeline legenda content -->
         <div class="legenda" ng-show="timeline.config.legendarer">
 
-          
+
           <div class="legenda-row">
             <strong>{{ui.planboard.members}}</strong>
               <ul>
                 <li ng-repeat="(key, value) in timeline.config.states" class="legenda-{{value.className}}">
                   <label>
                     <div class="square"></div>
-                    <input  type="checkbox" 
-                            ng-click="alterLegenda(timeline.config.legenda)" 
+                    <input  type="checkbox"
+                            ng-click="alterLegenda(timeline.config.legenda)"
                             ng-model="timeline.config.legenda[key]">{{value.label}}
                   </label>
                 </li>
@@ -595,8 +673,8 @@
 
               <!-- datetime -->
               <div class="control-group dater-mobile">
-                <input  name="date-start" 
-                        type="datetime" 
+                <input  name="date-start"
+                        type="datetime"
                         ng-model="slot.start.datetime">
               </div>
               <!-- end datetime -->
@@ -607,10 +685,10 @@
 
               <!-- date -->
               <div class="control-group dater">
-                <input  name="date-start" 
-                        type="text" 
-                        ng-model="slot.start.date" 
-                        data-date-format="dd-mm-yyyy" 
+                <input  name="date-start"
+                        type="text"
+                        ng-model="slot.start.date"
+                        data-date-format="dd-mm-yyyy"
                         bs-datepicker="">
                 <i class="icon-calendar"></i>
               </div>
@@ -618,9 +696,9 @@
 
               <!-- time -->
               <div class="control-group timer">
-                <input  name="time-start" 
-                        type="text" 
-                        ng-model="slot.start.time" 
+                <input  name="time-start"
+                        type="text"
+                        ng-model="slot.start.time"
                         bs-timepicker>
                 <i class="icon-time"></i>
               </div>
@@ -636,8 +714,8 @@
 
               <!-- datetime -->
               <div class="control-group dater-mobile">
-                <input  name="date-start" 
-                        type="datetime" 
+                <input  name="date-start"
+                        type="datetime"
                         ng-model="slot.end.datetime">
               </div>
               <!-- end datetime -->
@@ -648,10 +726,10 @@
 
               <!-- date -->
               <div class="control-group dater">
-                <input  name="date-end" 
-                        type="text" 
-                        ng-model="slot.end.date" 
-                        data-date-format="dd-mm-yyyy" 
+                <input  name="date-end"
+                        type="text"
+                        ng-model="slot.end.date"
+                        data-date-format="dd-mm-yyyy"
                         bs-datepicker="">
                 <i class="icon-calendar"></i>
               </div>
@@ -659,9 +737,9 @@
 
               <!-- time -->
               <div class="control-group timer">
-                <input  name="time-end" 
-                        type="text" 
-                        ng-model="slot.end.time" 
+                <input  name="time-end"
+                        type="text"
+                        ng-model="slot.end.time"
                         bs-timepicker>
                 <i class="icon-time"></i>
               </div>
@@ -673,7 +751,7 @@
             <!-- slot state -->
             <div class="form-elements-group">
               <label>{{ui.planboard.state}}</label>
-              <select ng-model="slot.state" 
+              <select ng-model="slot.state"
                       ng-options="option as value for (option, value) in states">
                 <option value="">{{ui.planboard.selectAState}}</option>
               </select>
@@ -690,16 +768,16 @@
             <!-- slot actions -->
             <div class="form-elements-actions pull-right">
               <div ng-show="forms.add">
-                <button type="button" 
-                        ng-click="timelineOnAdd('true', slot)" 
+                <button type="button"
+                        ng-click="timelineOnAdd('true', slot)"
                         class="btn btn-success">{{ui.planboard.add}}</button>
               </div>
               <div ng-show="forms.edit">
-                <button type="button" 
-                        ng-click="timelineOnRemove()" 
+                <button type="button"
+                        ng-click="timelineOnRemove()"
                         class="btn btn-danger">{{ui.planboard.del}}</button>
-                <button type="button" 
-                        ng-click="timelineOnChange('true', original, slot)" 
+                <button type="button"
+                        ng-click="timelineOnChange('true', original, slot)"
                         class="btn btn-success">{{ui.planboard.change}}</button>
               </div>
             </div>
@@ -722,7 +800,7 @@
         </div>
         <!-- end timeline -->
 
-        
+
         <hr>
 
 
@@ -741,7 +819,7 @@
           </small>
         </p>
         <!-- end timeline footer -->
-          
+
 
         <!-- end user timeline -->
 
